css - fized layout issues

--- a/css/responsive.custom.css
+++ b/css/responsive.custom.css
@@ -123,7 +123,29 @@
 /*  #menu-bar.nav nav ul li a {
     padding: 10px 4px;
   }*/
+
+@media only screen and (min-width:769px) and (max-width:1024px) {
+
+  #content-column {
+    background-image: url('../images/bg_vertical_border.png');
+    background-attachment: inherit;
+    background-repeat: repeat-y;
+    background-position: 80% 0;
+  }
+
+}
+
+
+
 @media only screen and (min-width: 1025px) {
+  
+  #content-column {
+    background-image: url('../images/bg_vertical_border.png');
+    background-attachment: inherit;
+    background-repeat: repeat-y;
+    background-position: 75% 0;
+  }
+
   
 
 }
